@@ -9,7 +9,8 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 
 Bug Fixes::
 
-* apply text transformation and formatting when checking height of heading for orphan prevention
+* apply text transform and formatting when checking height of heading for orphan prevention
+* apply text transform and formatting when computing height of background for caption
 
 == 2.2.0 (2022-07-22) - @mojavelinux
 
